--- a/style.css
+++ b/style.css
@@ -1,5 +1,25 @@
 *{
-    margin:0;
-    padding:0;
-    
+    margin: 0;
+    padding: 0;
+}
+body{
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    /* background: rgb(242,117,176); */
+    width: 100%;
+    height: 100vh;
+    background: linear-gradient(291deg, rgba(255, 255, 0, 0.21) 0%, rgba(0, 188, 212, 0.29) 28%, rgba(238, 130, 238, 0.39) 100%);
+}
+#form{
+    display: flex;
+    flex-direction: right;
+    margin-left: 10px;
+    margin-top: 20px;
+    justify-content: center;
+}
+#form label{
+    margin-left: 10px;
+    margin-right: 5px;
+}
+#form input{
+    width: 100px;
 }
