--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    box-sizing: border-box;
 }
 body{
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
@@ -11,15 +12,11 @@ body{
 }
 #main-container{
     padding-top: 20px;
+    line-height: 25px;
 }
-.centerdiv{
-    display: flex;
-    justify-content: center;
-}
+
 #form{
-    display: flex;
-    flex-direction: right;
-    margin-left: 10px;
+    display:flex;
     margin-top: 20px;
     justify-content: center;
 }
@@ -27,35 +24,58 @@ body{
     margin-left: 10px;
     margin-right: 5px;
 }
-#form input{
-    width: 100px;
+input{
     border:none;
     border-radius: 5px;
     box-shadow: 2px 2px rgb(174, 173, 173);
 }
 
-#btns-div{
+.btns-div{
     display: flex;
 flex-direction: right;
 justify-content: center;
 margin-top: 20px;
 }
-button:active{
+button:active, #csvFileInput:active{
     transform: translate(2px, 2px);
     background-color:#6b0dca50;
 }
 button{
-    width: 7rem;
+    width: 5.5rem;
     height: 30px;
     background: linear-gradient(291deg, rgba(255, 255, 0, 0.21) 0%, rgba(0, 188, 212, 0.29) 28%, rgba(238, 130, 238, 0.39) 100%);
     border:none;
     border-radius: 7px;
     margin-top: 20px;
     margin-left: 5%;
+    margin-right: 5%;
     box-shadow: 2px 3px 5px 2px grey;
     cursor : pointer;
     }
+#csvFileInput{
+    opacity: 0;
+    position: absolute;
+    z-index: -1;
+}
+.custom-file-upload {
+    display: inline-block;
+    padding: 10px 5px;
+    cursor: pointer;
+    background: linear-gradient(291deg, rgba(255, 255, 0, 0.21) 0%, rgba(0, 188, 212, 0.29) 28%, rgba(238, 130, 238, 0.39) 100%);
+    border: none;
+    border-radius: 7px;
+    box-shadow: 2px 3px 5px 2px grey;
+    transition: transform 0.1s, background-color 0.3s;
+}
 
+.custom-file-upload:hover {
+    background-color: #d3d3d3;
+}
+
+.custom-file-upload:active {
+    transform: translate(2px, 2px);
+    background-color: #6b0dca50;
+}
 hr{
         height:2px;
         background-color:black;
@@ -72,7 +92,7 @@ hr:hover{
     padding: 20px;
     border: 2px solid black;
 }
-     #table tr th, td{
+#table tr th, #table td{
       
         margin-left: 10%;
         padding: 6px;
