--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ flex-direction: right;
 justify-content: center;
 margin-top: 20px;
 }
-button:active, #csvFileInput:active{
+button:active, .custom-file-upload:active{
     transform: translate(2px, 2px);
     background-color:#6b0dca50;
 }
@@ -59,7 +59,9 @@ button{
 }
 .custom-file-upload {
     display: inline-block;
-    padding: 10px 5px;
+    height: 30px;
+    margin-top: 20px;
+    padding: 5px 5px;
     cursor: pointer;
     background: linear-gradient(291deg, rgba(255, 255, 0, 0.21) 0%, rgba(0, 188, 212, 0.29) 28%, rgba(238, 130, 238, 0.39) 100%);
     border: none;
@@ -68,14 +70,14 @@ button{
     transition: transform 0.1s, background-color 0.3s;
 }
 
-.custom-file-upload:hover {
+/* .custom-file-upload:hover {
     background-color: #d3d3d3;
-}
+} */
 
-.custom-file-upload:active {
+/* .custom-file-upload:active {
     transform: translate(2px, 2px);
     background-color: #6b0dca50;
-}
+} */
 hr{
         height:2px;
         background-color:black;
