--- a/style2.css
+++ b/style2.css
@@ -3,7 +3,7 @@
 padding: 0;
 }
 body{
-	font-family: font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+	font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 	width: 100%;
 	display: flex;
 	flex-direction: row;
