--- a/style2.css
+++ b/style2.css
@@ -5,17 +5,16 @@ padding: 0;
 body{
 	font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 	width: 100%;
-	display: flex;
-	flex-direction: row;
+	/* display: flex;
+	flex-direction: row; */
 justify-content: center;
-flex-wrap: wrap;
+/* flex-wrap: wrap; */
 background: linear-gradient(291deg, rgba(255, 255, 0, 0.21) 0%, rgba(0, 188, 212, 0.29) 28%, rgba(238, 130, 238, 0.39) 100%);
 }
 #table{
-margin-top: 20px;
+    margin-top: 20px;
+    width: 100%;
 }
-tr{
-width: 100%;}
 
 .tdm, td,th{
 margin-top: 20px;
@@ -30,6 +29,7 @@ input{
 border: none;
 border-radius: 5px;
 }
+
 button{
 	width: 7rem;
 	height: 2rem;
@@ -40,11 +40,11 @@ button{
 	background: linear-gradient(291deg, rgba(255, 255, 0, 0.21) 0%, rgba(0, 188, 212, 0.29) 28%, rgba(238, 130, 238, 0.39) 100%);
 	cursor: pointer;
 }
+
 button:active{
 	transform: translate(2px, 2px);
 	background: #6b0dca50;
 }
-
 
 label, input{
 cursor: pointer;
