--- a/style2.css
+++ b/style2.css
@@ -10,14 +10,14 @@ body{
     }
 #table{
     margin-top: 20px;
-    margin-left: 10%;
+    /* margin-left: 10%; */
     width: 80%;
     border: 2px solid black;
     border-spacing: 10px;
     }
 .tdm{
         border: 1px solid grey;
-        width: 30%;
+        /* width: 30%; */
         margin-right: 10px;
         /* border-left: 1px solid grey; */
     }
