--- a/style2.css
+++ b/style2.css
@@ -8,13 +8,14 @@ body{
     justify-content: center;
     background: linear-gradient(291deg, rgba(255, 255, 0, 0.21) 0%, rgba(0, 188, 212, 0.29) 28%, rgba(238, 130, 238, 0.39) 100%);
     }
-#table{
+#table, #table2{
     margin-top: 20px;
-    /* margin-left: 10%; */
+    margin-left: 10%;
     width: 80%;
-    border: 2px solid black;
+    /* border: 2px solid black; */
     border-spacing: 10px;
     }
+
 .tdm{
         border: 1px solid grey;
         /* width: 30%; */
