--- a/expensive.css
+++ b/expensive.css
@@ -14,7 +14,7 @@ body{
     background-color: #13ffb085;
     border-radius: 10px;
     width: 80%;
-    min-height: 150px;
+    min-height: 170px;
     padding: 10px;
     display: flex;
     justify-content: space-evenly;
@@ -26,25 +26,29 @@ body{
 .common{
     border: none;
     border-radius: 5px;
-    padding: 5px;
-    width: fit-content;
-    height: 2rem;
+    padding: 0.5rem;
+    height: 2.7rem;
     outline: none;
 }
 .common:hover{
 background-color: rgba(50, 52, 139, 0.74);
 }
 button{
-    width: 5.5rem;
-    height: 30px;
     background: linear-gradient(291deg, rgba(255, 255, 0, 0.21) 0%, rgba(0, 188, 212, 0.29) 28%, rgba(238, 130, 238, 0.39) 100%);
     border:none;
     border-radius: 7px;
-    margin-top: 20px;
-    margin-left: 5%;
-    margin-right: 5%;
     box-shadow: 2px 3px 5px 2px grey;
     cursor : pointer;
+    color: rgb(0, 0, 0);
+    font-weight: 600;
+    padding: 1rem;
+    }
+button:hover{
+    background-color: rgba(50, 52, 139, 0.74);
+}
+button:active{
+    background-color: #fff;
+        transform: translate(2px, 2px);
     }
 
 
