--- a/style.css
+++ b/style.css
@@ -100,3 +100,11 @@ hr:hover{
         padding: 6px;
         border: 1px solid black;
      } 
+.output{
+    width: 100%;
+
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+}
